syntax = "proto2";
option cc_enable_arenas = true;

package hrpc;

message RpcHeader
{
  enum Type {
    REQUEST = 0;
    RESPONSE = 1;
  };
  optional Type packet_type = 1;
  optional string service_name = 2;
  optional string method_name = 3;
  optional uint64 rpc_id = 4;
  optional int32 rpc_result = 5;
}
